--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.ico" />
